# usan-voice-engine

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md
apps/api/: .dockerignore  Dockerfile  docker-entrypoint.sh  pyproject.toml
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_initial_schema.py  0002_add_sip_call_id_index.py  0003_retry_indexes.py  0004_tool_logging_tables.py  0005_call_egress_id.py  0006_call_recording_status.py  0007_reconcile_index.py  0008_metrics_tables.py  0009_grafana_ro_role.py  0010_admin_agent_profiles.py  0011_followup_callback_sms.py  0012_batch_scheduled_calling.py  0013_ops_queue_status_workflow.py  0014_outbound_webhooks.py  0015_custom_variables.py  0016_agent_profile_draft_revision.py  0017_notifications_substrate.py  0018_followup_crisis_cols.py  0019_family_contacts_tasks.py  0020_medication_reminders.py  0021_personal_facts_summaries.py  0022_schedule_slot.py  0023_survey_activity.py  0024_callback_autodial.py  0025_family_reports.py  0026_call_backlink_set_null.py  0027_rename_elder_to_contact.py  0028_backfill_elder_prompt_tokens.py  0029_app_role.py  0030_organizations.py  0031_org_id_contacts_rls.py  0032_org_id_rls_fanout.py  0033_memberships.py  0034_per_org_uniqueness.py  0035_invitations.py  0036_compat_api_keys.py  0037_compat_webhooks.py  0038_call_status_registered.py  0039_call_archived_at.py  0040_phone_numbers.py  (+13 more)
apps/api/scripts/: list_cartesia_voices.py
apps/api/scripts/seed_retell_profiles/: README.md  build_profiles.py  seed_profiles.py
apps/api/scripts/seed_retell_profiles/profiles/: betty.json  companion.json  inbound.json  sales.json
apps/api/src/usan_api/: activities_catalog.py  admin_actor.py  admin_session.py  auth.py  background.py  builtin_vars.py  callback_dialer.py  chat_analysis.py  client_ip.py  cost.py  dialer.py  emergency_resources.py  family_report_job.py  gmail_sender.py  invite_email.py  invites.py  livekit_dispatch.py  livekit_webhooks.py  logging_config.py  main.py  masking.py  notification_outbox.py  notifications.py  oauth.py  object_storage.py  phi_audit.py  phone.py  prompt_substitution.py  quiet_hours.py  ratelimit.py  recording_urls.py  retention.py  retry_orchestrator.py  retry_policy.py  schedule_orchestrator.py  schedule_windows.py  settings.py  sip_status.py  sms_outbox.py  sms_render.py  (+9 more)
apps/api/src/usan_api/compat/: __init__.py  agent_bridge.py  app.py  auth.py  batch_create.py  call_create.py  call_serializer.py  chat_agent_bridge.py  chat_serializer.py  chat_service.py  errors.py  flow_runtime.py  flow_runtime_voice.py  ids.py  inbound_autocreate.py  inbound_router.py  kb_chunking.py  kb_embeddings.py  kb_ingestion.py  kb_ingestion_poller.py  kb_retrieval.py  kb_serializer.py  kb_service.py  kb_sources.py  lifecycle.py  playground_service.py  (+7 more)
apps/api/tests/: conftest.py  kb_helpers.py  test_admin_audit_api.py  test_admin_call_now_api.py  test_admin_callback_requests_api.py  test_admin_calls_api.py  test_admin_calls_repo.py  test_admin_contacts_api.py  test_admin_contacts_crud_api.py  test_admin_custom_variables_api.py  test_admin_defaults_api.py  test_admin_dnc_api.py  test_admin_elders_api.py  test_admin_family.py  test_admin_invites_api.py  test_admin_knowledge_bases_api.py  test_admin_members.py  test_admin_orchestration_rls.py  test_admin_orchestration_schemas.py  test_admin_organizations.py  test_admin_profiles_api.py  test_admin_profiles_custom_vars.py  test_admin_routes_org_scoped.py  test_admin_schedules_api.py  test_admin_session_unit.py  test_admin_sms_messages_api.py  test_admin_tools_api.py  test_admin_tools_schemas.py  test_admin_users_api.py  test_admin_users_repo.py  test_agent_channel_callers.py  test_agent_channel_column.py  test_agent_channel_repo_guards.py  test_agent_config.py  test_agent_config_resolve.py  test_agent_config_schema.py  test_agent_profiles_repo.py  test_api_agent_tool_parity.py  test_app_role.py  test_app_security.py  (+212 more)
apps/api/tests/compat/: conformance.py  conftest.py  oracle_loader.py  test_agent_bridge.py  test_agent_flow_binding.py  test_agent_response_engine.py  test_chat_agent_bridge.py  test_chat_agent_isolation.py  test_chat_agent_schemas.py  test_chat_agents_router.py  test_chat_analysis_serializer.py  test_chat_ids.py  test_chat_models.py  test_chat_repo_serializer.py  test_chat_schemas.py  test_chat_service.py  test_conformance_selftest.py  test_conversation_flow_component_crud.py  test_conversation_flow_crud.py  test_create_sms_chat.py  test_create_web_call_service.py  test_delete_agent_version.py  test_delete_call.py  test_export_requests_frozen.py  test_find_open_sms_chat.py  test_flow_runtime_chat.py  test_flow_runtime_unit.py  test_freeze_agent_id.py  test_freeze_agents.py  test_freeze_batch.py  test_freeze_calls.py  test_freeze_chat_agents.py  test_freeze_chat_analysis.py  test_freeze_chats.py  test_freeze_conversation_flow_components.py  test_freeze_conversation_flows.py  test_freeze_knowledge_bases.py  test_freeze_sms_chat.py  test_freeze_status_map.py  test_freeze_surface_roundtrip.py  (+30 more)
services/agent/: Dockerfile  Dockerfile.base  pyproject.toml
services/agent/src/usan_agent/: agent_config.py  api_client.py  check_in.py  crisis_watcher.py  dynamic_vars.py  external_tools.py  ids.py  logging_config.py  metrics_hooks.py  pipeline.py  prompt_vars.py  rag_agent.py  recording.py  sanitize.py  settings.py  transcript.py  voicemail.py  voicemail_action.py  worker.py
services/agent/tests/: test_agent_config.py  test_agent_config_defaults.py  test_agent_config_external_tools.py  test_api_client.py  test_api_client_flow_advance.py  test_api_client_tools.py  test_check_in.py  test_crisis_watcher.py  test_dynamic_vars.py  test_external_tools.py  test_logging_config.py  test_metrics_hooks.py  test_pipeline.py  test_prompt_substitution_e2e.py  test_prompt_vars.py  test_rag_agent.py  test_rag_agent_flow.py  test_recording.py  test_recording_consent.py  test_settings.py  test_test_session.py  test_transcript.py  test_voicemail.py  test_voicemail_action.py  test_web_session.py  test_worker.py
(+558 files in other folders)
