[project]
name = "usan-api"
version = "0.1.0"
description = "USAN voice engine — REST API"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.0",
    "uvicorn[standard]>=0.48.0",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.14.0",
    "loguru>=0.7.3",
    "httpx>=0.28.1",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "livekit-api>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.0",
    "mypy>=1.13.0",
    "testcontainers[postgres]>=4.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/usan_api"]

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S", "PT", "RET", "SIM"]
ignore = ["S101", "B008"]  # S101: allow assert in tests; B008: FastAPI Depends() pattern

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
files = ["src"]
