[project]
name = "usan-api"
version = "0.1.0"
description = "USAN voice engine — REST API"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.0",
    "uvicorn[standard]>=0.48.0",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.14.2",
    "loguru>=0.7.3",
    "httpx>=0.28.1",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "livekit-api>=1.0.0",
    "pyjwt[crypto]>=2.10.0",
    "google-cloud-storage>=2.18.0",
    "google-genai>=1.0.0",
    "limits>=5.8.0",
    "prometheus-fastapi-instrumentator>=8.0.0,<9",
    "prometheus-client>=0.21.1,<0.26",
    "pgvector>=0.3.6",
    "python-multipart>=0.0.12",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.0",
    "mypy>=1.13.0",
    "testcontainers[postgres]>=4.8.0",
    "pytest-xdist>=3.6",
    "retell-sdk==5.56.0",
    "openapi-schema-validator>=0.6.2",
    "jsonschema>=4.21",
    "referencing>=0.35",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/usan_api"]

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S", "PT", "RET", "SIM"]
ignore = ["S101"]  # allow assert in tests

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency markers are designed to be used as argument defaults.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path", "fastapi.Header", "fastapi.Body", "fastapi.Cookie", "fastapi.Form", "fastapi.File"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "frozen: contract-frozen conformance assertions against the pinned RetellAI oracle",
]
# Run in parallel by default (pytest-xdist). The suite is dominated by per-test DB
# I/O wait, not CPU, so parallelism gives a near-linear speedup (~585s -> ~31s on a
# 14-core box). Tests are already order-independent (the `client` fixture truncates
# before every test). To debug a single test serially (pdb, -s output), override
# with `-n0`, e.g. `uv run pytest -n0 tests/test_x.py::test_y -s`.
# --dist worksteal: idle workers steal queued tests from busy ones, killing the
# end-of-run straggler tail (default load-scheduling pre-assigns chunks, so one
# worker can sit on the slow migration tests while the rest are done).
addopts = "-n auto --dist worksteal"

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
files = ["src"]
