[project]
name = "usan-agent"
version = "0.1.0"
description = "USAN voice engine — LiveKit Agents worker"
requires-python = ">=3.12,<3.13"
dependencies = [
    "livekit-agents[silero,turn-detector]>=1.5.14",
    "livekit-api>=1.0.0",
    "livekit-plugins-cartesia>=1.5.14",
    "livekit-plugins-google>=1.5.14",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.14.2",
    "loguru>=0.7.3",
    "httpx>=0.28.1",
    "pyjwt>=2.10.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/usan_agent"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S", "PT", "RET", "SIM"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
files = ["src"]
